Header gap fixed. Advanced search link position moved. View story page description layou changed a little bit

--- a/src/scss/_objects.scss
+++ b/src/scss/_objects.scss
@@ -176,7 +176,7 @@
 }
 
 #front-content {
-	margin-top: 6vh;
+	// margin-top: 6vh;
 	// margin-left: 15vw;
 	// overflow: hidden;
 }
