--- a/src/scss/pages/_search.scss
+++ b/src/scss/pages/_search.scss
@@ -101,6 +101,10 @@
 	}
 
 	.search-advanced {
+
+    width: 40%;
+	  text-align: center;
+	  margin: auto;
 		margin-top: 10px;
 		// margin-left: 150px;
 		color: #fff;
@@ -210,8 +214,8 @@
 		width: 30%;
 		margin: 10px 0;
 		margin-right: 3%;
-		@media (max-width: 700px) {
-			width: 46%;
+		@media (max-width: 768px) {
+			width: 45%;
 			margin-right: 4%;
 		}
 		background: #f7f7f7;
@@ -229,7 +233,8 @@
 		img {
 			width: 100%;
 			// height: 200px;
-			height: auto;
+			// height: auto;
+			height: 185px;
 			max-height: 250px;
 		}
 
